setup liip/test-fixtures-bundle

--- a/config/packages/test/doctrine.yaml
+++ b/config/packages/test/doctrine.yaml
@@ -1,4 +1,5 @@
 doctrine:
     dbal:
-        # "TEST_TOKEN" is typically set by ParaTest
-        dbname: 'main_test%env(default::TEST_TOKEN)%'
+        driver: pdo_sqlite
+        path: "%kernel.cache_dir%/test.db"
+        url: null
